# avr-bitlets

./: .gitignore  README.org
beatstep-po-adapter/: Makefile  README.org  beatstep_po_adapter.c
clock-divider/: README.org  avr.ini  meson.build
clock-divider/hw/clock-divider/: clock-divider-cache.lib  clock-divider.sch  fp-info-cache  fp-lib-table  special-parts.dcm  special-parts.lib  sym-lib-table
clock-divider/hw/clock-divider/special-parts.pretty/: Jack_3.5mm_CUI_SJ-43516-SMT_Horizontal.kicad_mod  Sx52-1xxxxx.kicad_mod
